examples/networkpolicies/invalid-standard-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: invalid-allow-outbound-acloudjourney-io
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - hosts:
        - "acloudjourney.io"
    ports:
    - protocol: TCP
      port: 443
